fixed overflow

--- a/src/components/signup/stepOne/account.scss
+++ b/src/components/signup/stepOne/account.scss
@@ -1,19 +1,23 @@
 
 body {
-  overflow: auto; 
-  height: 150%;
+  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  height: 100vh;
 }
 
 .account-wrapper {
   display: flex;
   width: 100vw;
-  height: 150%;
+  height: 100vh;
 }
 
 .image-container {
+  overflow-y: hidden;
+  overflow-x: hidden;
   flex: 1;
   max-width: 700px;
-  height: 100%;
+  height: 100vh;
   display: block;
   background: #F5F0EC;
   justify-content: center;
@@ -22,6 +26,8 @@ body {
 }
 
 .image {
+  overflow-y: hidden;
+  overflow-x: hidden;
   width: 556px;
   height: 720px;
   border-radius: 30px;
@@ -29,10 +35,10 @@ body {
 
 
 .account-container {
-  overflow-y: auto;
+  overflow-y: hidden;
   flex: 1;
   max-width: 484px;
-  height: 140%;
+  height: 100vh;
   gap: 56px;
   margin-left: 3.875rem;
   margin-top: 4.475rem;
@@ -52,7 +58,7 @@ body {
   overflow-x: hidden;
   box-sizing: border-box;
   width: 100%;
-  height: 121%;
+  height: 100vh;
   gap: 40px;
 }
 
@@ -67,7 +73,7 @@ body {
   .account-wrapper {
     justify-content: center;
     align-items: center;
-    height: 150%;
+    height: 110%;
     overflow-x: hidden;
     overflow-y: auto;
     overflow-x: hidden;
@@ -94,8 +100,8 @@ body {
     overflow-y: auto;
     overflow-x: hidden;
     margin-left: 0;
-    width: 150%;
-    height: 130%;
+    width: 100%;
+    height: 110%;
   }
 }
 
